--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
     </div>
     <div class="foot">
       <div style="background-color: #31c3bd">
-        <p>X(YOU)<span id="xScore">0</span></p>
+        <p>X(P2)<span id="xScore">0</span></p>
       </div>
       <div style="background-color: #a8bfc9">
         <p>TIES<span id="ties">0</span></p>
       </div>
       <div style="background-color: #f2b137">
-        <p>O(CPU)<span id="oScore">0</span></p>
+        <p>O(P1)<span id="oScore">0</span></p>
       </div>
     </div>
   </div>
